# Web-Goit-hw04

./: Dockerfile.txt  index.html  main.py  pyproject.toml
storage/: data.json
