[tool.poetry]
name = "Web-Goit-hw04"
version = "0.1.0"
description = ""
authors = ["VolodymyrKoz <vkill7595@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"